# Lawmind

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile.spark  FRONTEND_GUIDE.md  GETTING_STARTED.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: __init__.py  base.py  registry.py  runtime.py
agents/legal_reasoning_agent/: __init__.py  agent.py  prompts.py
agents/ocr_agent/: __init__.py  agent.py  schema.py
credentials/: README.md
data/: download_legal_pdfs.py  upload_to_gcs.py
deployment/: deploy.sh
docs/: agents.md  architecture.md  data_infra.md
frontend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  README.md  deploy-cloudrun.sh  next.config.js  package.json
frontend/components/: AnswerPanel.tsx  CitationList.tsx  Layout.tsx  SearchBox.tsx  UploadBox.tsx
frontend/lib/: api.ts  store.ts
frontend/pages/: _document.tsx  index.tsx  search.tsx  upload.tsx
frontend/styles/: globals.css
infra/gcp/: main.tf
jobs/: analyze_job.py  embed_job.py  ocr_job.py
metadata_db/: __init__.py  repository.py
observability/: __init__.py  logging.py  tracing.py
scripts/: dev_server.py  run_spark_pipeline.sh
services/ocr_process/: handler.py  requirements.txt
services/rag_query/: handler.py  requirements.txt
services/upload_doc/: complete_handler.py  handler.py  requirements.txt
shared/: __init__.py
shared/config/: settings.py
shared/models/: __init__.py  chunk.py  document.py  query.py
spark/: requirements-spark.txt  spark-defaults.conf
tools/: __init__.py  chunking.py  embeddings.py  llm.py  ocr.py  vector_search.py
vector_db/: __init__.py  client.py  schema.py
